--- a/src/ui/components/Footer/footer.module.css
+++ b/src/ui/components/Footer/footer.module.css
@@ -5,3 +5,9 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+@media only screen and (max-width: 992px) {
+    .footer {
+        background-position: bottom;
+    }
+}
